# Copyright (C) 2020 Daniel Maksymow
# 
# Copying and distribution of this file, with or without modification,
# are permitted in any medium without royalty provided the copyright
# notice and this notice are preserved.  This file is offered as-is,
# without any warranty.

configure_file(output: 'config.h', configuration: ags_config)

x_sources = files(
  'ags_animation_window.c',
  'ags_audio_preferences.c',
  'ags_audio_preferences_callbacks.c',
  'ags_automation_editor.c',
  'ags_automation_editor_callbacks.c',
  'ags_automation_window.c',
  'ags_automation_window_callbacks.c',
  'ags_bulk_member.c',
  'ags_bulk_member_callbacks.c',
  'ags_connection_editor.c',
  'ags_connection_editor_callbacks.c',
  'ags_context_menu.c',
  'ags_dssi_browser.c',
  'ags_dssi_browser_callbacks.c',
  'ags_effect_bridge.c',
  'ags_effect_bridge_callbacks.c',
  'ags_effect_bulk.c',
  'ags_effect_bulk_callbacks.c',
  'ags_effect_line.c',
  'ags_effect_line_callbacks.c',
  'ags_effect_pad.c',
  'ags_effect_pad_callbacks.c',
  'ags_effect_separator.c',
  'ags_export_soundcard.c',
  'ags_export_soundcard_callbacks.c',
  'ags_export_window.c',
  'ags_export_window_callbacks.c',
  'ags_generic_preferences.c',
  'ags_generic_preferences_callbacks.c',
  'ags_input_collection_editor.c',
  'ags_input_collection_editor_callbacks.c',
  'ags_input_editor.c',
  'ags_input_editor_callbacks.c',
  'ags_input_listing_editor.c',
  'ags_input_listing_editor_callbacks.c',
  'ags_ladspa_browser.c',
  'ags_ladspa_browser_callbacks.c',
  'ags_line.c',
  'ags_line_callbacks.c',
  'ags_line_editor.c',
  'ags_line_editor_callbacks.c',
  'ags_line_member.c',
  'ags_line_member_callbacks.c',
  'ags_line_member_editor.c',
  'ags_line_member_editor_callbacks.c',
  'ags_link_collection_editor.c',
  'ags_link_collection_editor_callbacks.c',
  'ags_link_editor.c',
  'ags_link_editor_callbacks.c',
  'ags_listing_editor.c',
  'ags_listing_editor_callbacks.c',
  'ags_lv2_browser.c',
  'ags_lv2_browser_callbacks.c',
  'ags_machine.c',
  'ags_machine_callbacks.c',
  'ags_machine_editor.c',
  'ags_machine_editor_callbacks.c',
  'ags_machine_util.c',
  'ags_menu_action_callbacks.c',
  'ags_menu_bar.c',
  'ags_midi_dialog.c',
  'ags_midi_dialog_callbacks.c',
  'ags_midi_preferences.c',
  'ags_midi_preferences_callbacks.c',
  'ags_navigation.c',
  'ags_navigation_callbacks.c',
  'ags_notation_editor.c',
  'ags_notation_editor_callbacks.c',
  'ags_online_help_window.c',
  'ags_online_help_window_callbacks.c',
  'ags_osc_server_preferences.c',
  'ags_osc_server_preferences_callbacks.c',
  'ags_output_collection_editor.c',
  'ags_output_collection_editor_callbacks.c',
  'ags_output_editor.c',
  'ags_output_editor_callbacks.c',
  'ags_output_listing_editor.c',
  'ags_output_listing_editor_callbacks.c',
  'ags_pad.c',
  'ags_pad_callbacks.c',
  'ags_pad_editor.c',
  'ags_pad_editor_callbacks.c',
  'ags_performance_preferences.c',
  'ags_performance_preferences_callbacks.c',
  'ags_playback_window.c',
  'ags_playback_window_callbacks.c',
  'ags_plugin_browser.c',
  'ags_plugin_browser_callbacks.c',
  'ags_plugin_preferences.c',
  'ags_plugin_preferences_callbacks.c',
  'ags_preferences.c',
  'ags_preferences_callbacks.c',
  'ags_property_collection_editor.c',
  'ags_property_collection_editor_callbacks.c',
  'ags_property_editor.c',
  'ags_property_editor_callbacks.c',
  'ags_property_listing_editor.c',
  'ags_quit_dialog.c',
  'ags_quit_dialog_callbacks.c',
  'ags_resize_editor.c',
  'ags_sequencer_editor.c',
  'ags_sequencer_editor_callbacks.c',
  'ags_server_preferences.c',
  'ags_server_preferences_callbacks.c',
  'ags_sheet_editor.c',
  'ags_sheet_editor_callbacks.c',
  'ags_sheet_window.c',
  'ags_sheet_window_callbacks.c',
  'ags_soundcard_editor.c',
  'ags_soundcard_editor_callbacks.c',
  'ags_ui_provider.c',
  'ags_wave_editor.c',
  'ags_wave_editor_callbacks.c',
  'ags_wave_window.c',
  'ags_wave_window_callbacks.c',
  'ags_window.c',
  'ags_window_callbacks.c',
  'ags_xorg_application_context.c',
  'editor/ags_automation_edit_box.c',
  'editor/ags_automation_edit.c',
  'editor/ags_automation_edit_callbacks.c',
  'editor/ags_automation_meta.c',
  'editor/ags_automation_meta_callbacks.c',
  'editor/ags_automation_toolbar.c',
  'editor/ags_automation_toolbar_callbacks.c',
  'editor/ags_crop_note_dialog.c',
  'editor/ags_crop_note_dialog_callbacks.c',
  'editor/ags_envelope_dialog.c',
  'editor/ags_envelope_dialog_callbacks.c',
  'editor/ags_envelope_editor.c',
  'editor/ags_envelope_editor_callbacks.c',
  'editor/ags_envelope_info.c',
  'editor/ags_envelope_info_callbacks.c',
  'editor/ags_machine_radio_button.c',
  'editor/ags_machine_radio_button_callbacks.c',
  'editor/ags_machine_selection.c',
  'editor/ags_machine_selector.c',
  'editor/ags_machine_selector_callbacks.c',
  'editor/ags_move_note_dialog.c',
  'editor/ags_move_note_dialog_callbacks.c',
  'editor/ags_notation_edit.c',
  'editor/ags_notation_edit_callbacks.c',
  'editor/ags_notation_meta.c',
  'editor/ags_notation_meta_callbacks.c',
  'editor/ags_notation_toolbar.c',
  'editor/ags_notation_toolbar_callbacks.c',
  'editor/ags_pattern_envelope.c',
  'editor/ags_pattern_envelope_callbacks.c',
  'editor/ags_position_automation_cursor_dialog.c',
  'editor/ags_position_automation_cursor_dialog_callbacks.c',
  'editor/ags_position_notation_cursor_dialog.c',
  'editor/ags_position_notation_cursor_dialog_callbacks.c',
  'editor/ags_position_wave_cursor_dialog.c',
  'editor/ags_position_wave_cursor_dialog_callbacks.c',
  'editor/ags_ramp_acceleration_dialog.c',
  'editor/ags_ramp_acceleration_dialog_callbacks.c',
  'editor/ags_scrolled_automation_edit_box.c',
  'editor/ags_scrolled_wave_edit_box.c',
  'editor/ags_select_acceleration_dialog.c',
  'editor/ags_select_acceleration_dialog_callbacks.c',
  'editor/ags_select_buffer_dialog.c',
  'editor/ags_select_buffer_dialog_callbacks.c',
  'editor/ags_select_note_dialog.c',
  'editor/ags_select_note_dialog_callbacks.c',
  'editor/ags_sheet_edit.c',
  'editor/ags_sheet_edit_callbacks.c',
  'editor/ags_sheet_toolbar.c',
  'editor/ags_sheet_toolbar_callbacks.c',
  'editor/ags_vautomation_edit_box.c',
  'editor/ags_vwave_edit_box.c',
  'editor/ags_wave_edit_box.c',
  'editor/ags_wave_edit.c',
  'editor/ags_wave_edit_callbacks.c',
  'editor/ags_wave_meta.c',
  'editor/ags_wave_meta_callbacks.c',
  'editor/ags_wave_toolbar.c',
  'editor/ags_wave_toolbar_callbacks.c',
  'export/ags_machine_collection.c',
  'export/ags_machine_collection_callbacks.c',
  'export/ags_machine_collection_entry.c',
  'export/ags_machine_collection_entry_callbacks.c',
  'export/ags_midi_export_wizard.c',
  'export/ags_midi_export_wizard_callbacks.c',
  'export/ags_wave_export_dialog.c',
  'export/ags_wave_export_dialog_callbacks.c',
  'file/ags_simple_file.c',
  'import/ags_midi_import_wizard.c',
  'import/ags_midi_import_wizard_callbacks.c',
  'import/ags_track_collection.c',
  'import/ags_track_collection_callbacks.c',
  'import/ags_track_collection_mapper.c',
  'import/ags_track_collection_mapper_callbacks.c',
  'machine/ags_audiorec.c',
  'machine/ags_audiorec_callbacks.c',
  'machine/ags_cell_pattern.c',
  'machine/ags_cell_pattern_callbacks.c',
  'machine/ags_desk.c',
  'machine/ags_desk_callbacks.c',
  'machine/ags_desk_input_pad.c',
  'machine/ags_desk_input_pad_callbacks.c',
  'machine/ags_drum.c',
  'machine/ags_drum_callbacks.c',
  'machine/ags_drum_input_line.c',
  'machine/ags_drum_input_line_callbacks.c',
  'machine/ags_drum_input_pad.c',
  'machine/ags_drum_input_pad_callbacks.c',
  'machine/ags_drum_output_line.c',
  'machine/ags_drum_output_line_callbacks.c',
  'machine/ags_drum_output_pad.c',
  'machine/ags_drum_output_pad_callbacks.c',
  'machine/ags_dssi_bridge.c',
  'machine/ags_dssi_bridge_callbacks.c',
  'machine/ags_equalizer10.c',
  'machine/ags_equalizer10_callbacks.c',
  'machine/ags_ffplayer_bridge.c',
  'machine/ags_ffplayer_bridge_callbacks.c',
  'machine/ags_ffplayer_bulk_input.c',
  'machine/ags_ffplayer_bulk_input_callbacks.c',
  'machine/ags_ffplayer.c',
  'machine/ags_ffplayer_callbacks.c',
  'machine/ags_ffplayer_input_line.c',
  'machine/ags_ffplayer_input_line_callbacks.c',
  'machine/ags_ffplayer_input_pad.c',
  'machine/ags_ffplayer_input_pad_callbacks.c',
  'machine/ags_fm_oscillator.c',
  'machine/ags_fm_oscillator_callbacks.c',
  'machine/ags_fm_syncsynth.c',
  'machine/ags_fm_syncsynth_callbacks.c',
  'machine/ags_fm_synth.c',
  'machine/ags_fm_synth_callbacks.c',
  'machine/ags_fm_synth_input_line.c',
  'machine/ags_fm_synth_input_line_callbacks.c',
  'machine/ags_fm_synth_input_pad.c',
  'machine/ags_ladspa_bridge.c',
  'machine/ags_ladspa_bridge_callbacks.c',
  'machine/ags_live_dssi_bridge.c',
  'machine/ags_live_dssi_bridge_callbacks.c',
  'machine/ags_live_lv2_bridge.c',
  'machine/ags_live_lv2_bridge_callbacks.c',
  'machine/ags_lv2_bridge.c',
  'machine/ags_lv2_bridge_callbacks.c',
  'machine/ags_matrix_bridge.c',
  'machine/ags_matrix_bridge_callbacks.c',
  'machine/ags_matrix_bulk_input.c',
  'machine/ags_matrix_bulk_input_callbacks.c',
  'machine/ags_matrix.c',
  'machine/ags_matrix_callbacks.c',
  'machine/ags_mixer.c',
  'machine/ags_mixer_callbacks.c',
  'machine/ags_mixer_input_line.c',
  'machine/ags_mixer_input_pad.c',
  'machine/ags_oscillator.c',
  'machine/ags_oscillator_callbacks.c',
  'machine/ags_panel.c',
  'machine/ags_panel_callbacks.c',
  'machine/ags_panel_input_line.c',
  'machine/ags_panel_input_line_callbacks.c',
  'machine/ags_panel_input_pad.c',
  'machine/ags_pattern_box.c',
  'machine/ags_pattern_box_callbacks.c',
  'machine/ags_pitch_sampler.c',
  'machine/ags_pitch_sampler_callbacks.c',
  'machine/ags_pitch_sampler_file.c',
  'machine/ags_pitch_sampler_file_callbacks.c',
  'machine/ags_sf2_synth.c',
  'machine/ags_sf2_synth_callbacks.c',
  'machine/ags_sfz_synth.c',
  'machine/ags_sfz_synth_callbacks.c',
  'machine/ags_spectrometer.c',
  'machine/ags_spectrometer_callbacks.c',
  'machine/ags_syncsynth.c',
  'machine/ags_syncsynth_callbacks.c',
  'machine/ags_synth.c',
  'machine/ags_synth_callbacks.c',
  'machine/ags_synth_input_line.c',
  'machine/ags_synth_input_line_callbacks.c',
  'machine/ags_synth_input_pad.c',
  'osc/controller/ags_ui_osc_renew_controller.c',
  'task/ags_simple_file_read.c',
  'task/ags_simple_file_write.c',
)

x_dependencies = [
  common_dependencies,
  gtk_dependency,
  soup_dependency,
  xml2_dependency,
#TODO: i think that shouldn't be dependency for X
  instpatch_dependency,
  dl_dependency,
]

x_compiler_flags = compiler_flags
if get_option('poppler')
  x_dependencies += poppler_dependency
  x_compiler_flags += define_template.format('DOCDIR',
                                             get_option('datadir'))
endif

if get_option('webkit')
  x_dependencies += webkit_dependency
endif

if get_option('gstreamer')
  x_dependencies += gstreamer_dependency + gstreamer_audio_dependency + gstreamer_video_dependency + gstreamer_app_dependency + gstreamer_pbutils_dependency
endif

libx = static_library('x',
                      x_sources,
                      c_args: x_compiler_flags,
                      include_directories: [includes],
                      dependencies: x_dependencies,
                      )
