deprecated_ags_audio_h_sources = \
	ags_garbage_collector.h	\
	ags_effect.h		\
	ags_libao.h		\
	ags_timestamp.h		\
	ags_timestamp_factory.h	

ags_audio_h_sources = 		\
	$(deprecated_ags_audio_h_sources) \
	ags_acceleration.h	\
	ags_audio.h		\
	ags_audio_signal.h	\
	ags_automation.h	\
	ags_channel.h		\
	ags_channel_iter.h	\
	ags_config.h		\
	ags_devout.h		\
	ags_input.h		\
	ags_notation.h		\
	ags_note.h		\
	ags_output.h		\
	ags_pattern.h		\
	ags_port.h		\
	ags_recall_audio.h	\
	ags_recall_audio_run.h	\
	ags_recall_audio_signal.h \
	ags_recall_channel.h	\
	ags_recall_channel_run_dummy.h \
	ags_recall_channel_run.h \
	ags_recall_container.h	\
	ags_recall_dependency.h	\
	ags_recall.h		\
	ags_recall_id.h		\
	ags_recall_ladspa.h	\
	ags_recall_ladspa_run.h	\
	ags_recall_recycling_dummy.h \
	ags_recall_recycling.h	\
	ags_recall_recycling_container.h \
	ags_recycling.h		\
	ags_synths.h		\
	ags_task.h		\
	ags_timestamp_factory.h	\
	ags_timestamp.h

deprecated_ags_audio_c_sources =  \
	ags_garbage_collector.c	\
	ags_effect.c		\
	ags_libao.c		\
	ags_timestamp.c		\
	ags_timestamp_factory.c	

ags_audio_c_sources =  		\
	$(deprecated_ags_audio_c_sources) \
	ags_acceleration.c	\
	ags_audio.c		\
	ags_audio_signal.c	\
	ags_automation.c	\
	ags_channel.c		\
	ags_channel_iter.c	\
	ags_config.c		\
	ags_devout.c		\
	ags_input.c		\
	ags_notation.c		\
	ags_note.c		\
	ags_output.c		\
	ags_pattern.c		\
	ags_port.c		\
	ags_recall_audio.c	\
	ags_recall_audio_run.c	\
	ags_recall_audio_signal.c \
	ags_recall_channel.c	\
	ags_recall_channel_run_dummy.c \
	ags_recall_channel_run.c \
	ags_recall_container.c	\
	ags_recall_dependency.c	\
	ags_recall.c		\
	ags_recall_id.c		\
	ags_recall_ladspa.c	\
	ags_recall_ladspa_run.c	\
	ags_recall_recycling_dummy.c \
	ags_recall_recycling.c	\
	ags_recall_recycling_container.c \
	ags_recycling.c		\
	ags_synths.c		\
	ags_task.c		\
	ags_timestamp_factory.c	\
	ags_timestamp.c
