configure_file(output: 'config.h', configuration: ags_config)

audio_sources = files(
  'ags_acceleration.c',
  'ags_audio_application_context.c',
  'ags_audio_buffer_util.c',
  'ags_audio.c',
  'ags_audio_signal.c',
  'ags_automation.c',
  'ags_buffer.c',
  'ags_channel.c',
  'ags_char_buffer_util.c',
  'ags_devin.c',
  'ags_devout.c',
  'ags_diatonic_scale.c',
  'ags_fifoout.c',
  'ags_filter_util.c',
  'ags_fm_synth_util.c',
  'ags_fourier_transform_util.c',
  'ags_frequency_map.c',
  'ags_frequency_map_manager.c',
  'ags_fx_factory.c',
  'ags_generic_recall_channel_run.c',
  'ags_generic_recall_recycling.c',
  'ags_input.c',
  'ags_lfo_synth_util.c',
  'ags_midi.c',
  'ags_midiin.c',
  'ags_notation.c',
  'ags_note.c',
  'ags_output.c',
  'ags_pattern.c',
  'ags_playback.c',
  'ags_playback_domain.c',
  'ags_port.c',
  'ags_port_util.c',
  'ags_preset.c',
  'ags_recall_audio.c',
  'ags_recall_audio_run.c',
  'ags_recall_audio_signal.c',
  'ags_recall.c',
  'ags_recall_channel.c',
  'ags_recall_channel_run.c',
  'ags_recall_container.c',
  'ags_recall_dependency.c',
  'ags_recall_dssi.c',
  'ags_recall_dssi_run.c',
  'ags_recall_factory.c',
  'ags_recall_id.c',
  'ags_recall_ladspa.c',
  'ags_recall_ladspa_run.c',
  'ags_recall_lv2.c',
  'ags_recall_lv2_run.c',
  'ags_recall_recycling.c',
  'ags_recycling.c',
  'ags_recycling_context.c',
  'ags_sequencer_util.c',
  'ags_sf2_synth_generator.c',
  'ags_sf2_synth_util.c',
  'ags_sfz_synth_generator.c',
  'ags_sfz_synth_util.c',
  'ags_soundcard_util.c',
  'ags_sound_provider.c',
  'ags_synth_generator.c',
  'ags_synth_util.c',
  'ags_track.c',
  'ags_wave.c',
  'audio-unit/ags_audio_unit_client.c',
  'audio-unit/ags_audio_unit_devin.c',
  'audio-unit/ags_audio_unit_devout.c',
  'audio-unit/ags_audio_unit_port.c',
  'audio-unit/ags_audio_unit_server.c',
  'core-audio/ags_core_audio_client.c',
  'core-audio/ags_core_audio_devin.c',
  'core-audio/ags_core_audio_devout.c',
  'core-audio/ags_core_audio_midiin.c',
  'core-audio/ags_core_audio_port.c',
  'core-audio/ags_core_audio_server.c',
  'file/ags_audio_container.c',
  'file/ags_audio_container_manager.c',
  'file/ags_audio_file.c',
  'file/ags_audio_file_link.c',
  'file/ags_audio_file_manager.c',
  'file/ags_ipatch.c',
  'file/ags_ipatch_dls2_reader.c',
  'file/ags_ipatch_gig_reader.c',
  'file/ags_ipatch_sample.c',
  'file/ags_ipatch_sf2_reader.c',
  'file/ags_sfz_file.c',
  'file/ags_sfz_group.c',
  'file/ags_sfz_region.c',
  'file/ags_sfz_sample.c',
  'file/ags_sndfile.c',
  'file/ags_sound_container.c',
  'file/ags_sound_resource.c',
  'fx/ags_fx_analyse_audio.c',
  'fx/ags_fx_analyse_audio_processor.c',
  'fx/ags_fx_analyse_audio_signal.c',
  'fx/ags_fx_analyse_channel.c',
  'fx/ags_fx_analyse_channel_processor.c',
  'fx/ags_fx_analyse_recycling.c',
  'fx/ags_fx_buffer_audio.c',
  'fx/ags_fx_buffer_audio_processor.c',
  'fx/ags_fx_buffer_audio_signal.c',
  'fx/ags_fx_buffer_channel.c',
  'fx/ags_fx_buffer_channel_processor.c',
  'fx/ags_fx_buffer_recycling.c',
  'fx/ags_fx_dssi_audio.c',
  'fx/ags_fx_dssi_audio_processor.c',
  'fx/ags_fx_dssi_audio_signal.c',
  'fx/ags_fx_dssi_channel.c',
  'fx/ags_fx_dssi_channel_processor.c',
  'fx/ags_fx_dssi_recycling.c',
  'fx/ags_fx_envelope_audio.c',
  'fx/ags_fx_envelope_audio_processor.c',
  'fx/ags_fx_envelope_audio_signal.c',
  'fx/ags_fx_envelope_channel.c',
  'fx/ags_fx_envelope_channel_processor.c',
  'fx/ags_fx_envelope_recycling.c',
  'fx/ags_fx_eq10_audio.c',
  'fx/ags_fx_eq10_audio_processor.c',
  'fx/ags_fx_eq10_audio_signal.c',
  'fx/ags_fx_eq10_channel.c',
  'fx/ags_fx_eq10_channel_processor.c',
  'fx/ags_fx_eq10_recycling.c',
  'fx/ags_fx_ladspa_audio.c',
  'fx/ags_fx_ladspa_audio_processor.c',
  'fx/ags_fx_ladspa_audio_signal.c',
  'fx/ags_fx_ladspa_channel.c',
  'fx/ags_fx_ladspa_channel_processor.c',
  'fx/ags_fx_ladspa_recycling.c',
  'fx/ags_fx_lv2_audio.c',
  'fx/ags_fx_lv2_audio_processor.c',
  'fx/ags_fx_lv2_audio_signal.c',
  'fx/ags_fx_lv2_channel.c',
  'fx/ags_fx_lv2_channel_processor.c',
  'fx/ags_fx_lv2_recycling.c',
  'fx/ags_fx_notation_audio.c',
  'fx/ags_fx_notation_audio_processor.c',
  'fx/ags_fx_notation_audio_signal.c',
  'fx/ags_fx_notation_channel.c',
  'fx/ags_fx_notation_channel_processor.c',
  'fx/ags_fx_notation_recycling.c',
  'fx/ags_fx_pattern_audio.c',
  'fx/ags_fx_pattern_audio_processor.c',
  'fx/ags_fx_pattern_audio_signal.c',
  'fx/ags_fx_pattern_channel.c',
  'fx/ags_fx_pattern_channel_processor.c',
  'fx/ags_fx_pattern_recycling.c',
  'fx/ags_fx_peak_audio.c',
  'fx/ags_fx_peak_audio_processor.c',
  'fx/ags_fx_peak_audio_signal.c',
  'fx/ags_fx_peak_channel.c',
  'fx/ags_fx_peak_channel_processor.c',
  'fx/ags_fx_peak_recycling.c',
  'fx/ags_fx_playback_audio.c',
  'fx/ags_fx_playback_audio_processor.c',
  'fx/ags_fx_playback_audio_signal.c',
  'fx/ags_fx_playback_channel.c',
  'fx/ags_fx_playback_channel_processor.c',
  'fx/ags_fx_playback_recycling.c',
  'fx/ags_fx_volume_audio.c',
  'fx/ags_fx_volume_audio_processor.c',
  'fx/ags_fx_volume_audio_signal.c',
  'fx/ags_fx_volume_channel.c',
  'fx/ags_fx_volume_channel_processor.c',
  'fx/ags_fx_volume_recycling.c',
  'jack/ags_jack_client.c',
  'jack/ags_jack_devin.c',
  'jack/ags_jack_devout.c',
  'jack/ags_jack_midiin.c',
  'jack/ags_jack_port.c',
  'jack/ags_jack_server.c',
  'midi/ags_midi_buffer_util.c',
  'midi/ags_midi_builder.c',
  'midi/ags_midi_file.c',
  'midi/ags_midi_parser.c',
  'midi/ags_midi_util.c',
  'osc/ags_osc_buffer_util.c',
  'osc/ags_osc_builder.c',
  'osc/ags_osc_client.c',
  'osc/ags_osc_connection.c',
  'osc/ags_osc_message.c',
  'osc/ags_osc_parser.c',
  'osc/ags_osc_response.c',
  'osc/ags_osc_server.c',
  'osc/ags_osc_util.c',
  'osc/ags_osc_websocket_connection.c',
  'osc/ags_osc_xmlrpc_message.c',
  'osc/ags_osc_xmlrpc_server.c',
  'osc/controller/ags_osc_action_controller.c',
  'osc/controller/ags_osc_config_controller.c',
  'osc/controller/ags_osc_controller.c',
  'osc/controller/ags_osc_export_controller.c',
  'osc/controller/ags_osc_front_controller.c',
  'osc/controller/ags_osc_info_controller.c',
  'osc/controller/ags_osc_meter_controller.c',
  'osc/controller/ags_osc_node_controller.c',
  'osc/controller/ags_osc_plugin_controller.c',
  'osc/controller/ags_osc_renew_controller.c',
  'osc/controller/ags_osc_status_controller.c',
  'osc/xmlrpc/ags_osc_xmlrpc_controller.c',
  'pulse/ags_pulse_client.c',
  'pulse/ags_pulse_devin.c',
  'pulse/ags_pulse_devout.c',
  'pulse/ags_pulse_port.c',
  'pulse/ags_pulse_server.c',
  'recall/ags_analyse_audio_signal.c',
  'recall/ags_analyse_channel.c',
  'recall/ags_analyse_channel_run.c',
  'recall/ags_analyse_recycling.c',
  'recall/ags_buffer_audio_signal.c',
  'recall/ags_buffer_channel.c',
  'recall/ags_buffer_channel_run.c',
  'recall/ags_buffer_recycling.c',
  'recall/ags_capture_wave_audio.c',
  'recall/ags_capture_wave_audio_run.c',
  'recall/ags_capture_wave_channel.c',
  'recall/ags_capture_wave_channel_run.c',
  'recall/ags_copy_audio_signal.c',
  'recall/ags_copy_channel.c',
  'recall/ags_copy_channel_run.c',
  'recall/ags_copy_pattern_audio.c',
  'recall/ags_copy_pattern_audio_run.c',
  'recall/ags_copy_pattern_channel.c',
  'recall/ags_copy_pattern_channel_run.c',
  'recall/ags_copy_recycling.c',
  'recall/ags_count_beats_audio.c',
  'recall/ags_count_beats_audio_run.c',
  'recall/ags_delay_audio.c',
  'recall/ags_delay_audio_run.c',
  'recall/ags_envelope_audio_signal.c',
  'recall/ags_envelope_channel.c',
  'recall/ags_envelope_channel_run.c',
  'recall/ags_envelope_recycling.c',
  'recall/ags_eq10_audio_signal.c',
  'recall/ags_eq10_channel.c',
  'recall/ags_eq10_channel_run.c',
  'recall/ags_eq10_recycling.c',
  'recall/ags_feed_audio_signal.c',
  'recall/ags_feed_channel.c',
  'recall/ags_feed_channel_run.c',
  'recall/ags_feed_recycling.c',
  'recall/ags_lfo_audio_signal.c',
  'recall/ags_lfo_channel.c',
  'recall/ags_lfo_channel_run.c',
  'recall/ags_lfo_recycling.c',
  'recall/ags_loop_channel.c',
  'recall/ags_loop_channel_run.c',
  'recall/ags_mute_audio.c',
  'recall/ags_mute_audio_run.c',
  'recall/ags_mute_audio_signal.c',
  'recall/ags_mute_channel.c',
  'recall/ags_mute_channel_run.c',
  'recall/ags_mute_recycling.c',
  'recall/ags_peak_audio_signal.c',
  'recall/ags_peak_channel.c',
  'recall/ags_peak_channel_run.c',
  'recall/ags_peak_recycling.c',
  'recall/ags_play_audio.c',
  'recall/ags_play_audio_signal.c',
  'recall/ags_play_channel.c',
  'recall/ags_play_channel_run.c',
  'recall/ags_play_channel_run_master.c',
  'recall/ags_play_dssi_audio.c',
  'recall/ags_play_dssi_audio_run.c',
  'recall/ags_play_lv2_audio.c',
  'recall/ags_play_lv2_audio_run.c',
  'recall/ags_play_notation_audio.c',
  'recall/ags_play_notation_audio_run.c',
  'recall/ags_play_recycling.c',
  'recall/ags_play_wave_audio.c',
  'recall/ags_play_wave_audio_run.c',
  'recall/ags_play_wave_channel.c',
  'recall/ags_play_wave_channel_run.c',
  'recall/ags_prepare_audio_signal.c',
  'recall/ags_prepare_channel.c',
  'recall/ags_prepare_channel_run.c',
  'recall/ags_prepare_recycling.c',
  'recall/ags_record_midi_audio.c',
  'recall/ags_record_midi_audio_run.c',
  'recall/ags_route_dssi_audio.c',
  'recall/ags_route_dssi_audio_run.c',
  'recall/ags_route_lv2_audio.c',
  'recall/ags_route_lv2_audio_run.c',
  'recall/ags_rt_stream_audio_signal.c',
  'recall/ags_rt_stream_channel.c',
  'recall/ags_rt_stream_channel_run.c',
  'recall/ags_rt_stream_recycling.c',
  'recall/ags_stream_audio_signal.c',
  'recall/ags_stream_channel.c',
  'recall/ags_stream_channel_run.c',
  'recall/ags_stream_recycling.c',
  'recall/ags_volume_audio_signal.c',
  'recall/ags_volume_channel.c',
  'recall/ags_volume_channel_run.c',
  'recall/ags_volume_recycling.c',
  'task/ags_add_audio.c',
  'task/ags_add_audio_signal.c',
  'task/ags_add_effect.c',
  'task/ags_add_note.c',
  'task/ags_add_soundcard.c',
  'task/ags_apply_bpm.c',
  'task/ags_apply_presets.c',
  'task/ags_apply_sequencer_length.c',
  'task/ags_apply_sf2_synth.c',
  'task/ags_apply_sfz_synth.c',
  'task/ags_apply_sound_config.c',
  'task/ags_apply_synth.c',
  'task/ags_apply_tact.c',
  'task/ags_cancel_audio.c',
  'task/ags_cancel_channel.c',
  'task/ags_clear_audio_signal.c',
  'task/ags_clear_buffer.c',
  'task/ags_crop_note.c',
  'task/ags_export_output.c',
  'task/ags_free_selection.c',
  'task/ags_link_channel.c',
  'task/ags_move_note.c',
  'task/ags_open_file.c',
  'task/ags_open_sf2_instrument.c',
  'task/ags_open_sf2_sample.c',
  'task/ags_open_sfz_file.c',
  'task/ags_open_single_file.c',
  'task/ags_open_wave.c',
  'task/ags_remove_audio.c',
  'task/ags_remove_audio_signal.c',
  'task/ags_remove_note.c',
  'task/ags_remove_soundcard.c',
  'task/ags_reset_amplitude.c',
  'task/ags_reset_fx_analyse.c',
  'task/ags_reset_fx_peak.c',
  'task/ags_reset_note.c',
  'task/ags_reset_peak.c',
  'task/ags_resize_audio.c',
  'task/ags_seek_soundcard.c',
  'task/ags_set_audio_channels.c',
  'task/ags_set_buffer_size.c',
  'task/ags_set_device.c',
  'task/ags_set_format.c',
  'task/ags_set_muted.c',
  'task/ags_set_samplerate.c',
  'task/ags_start_audio.c',
  'task/ags_start_channel.c',
  'task/ags_start_sequencer.c',
  'task/ags_start_soundcard.c',
  'task/ags_stop_sequencer.c',
  'task/ags_stop_soundcard.c',
  'task/ags_switch_buffer_flag.c',
  'task/ags_tic_device.c',
  'task/ags_toggle_pattern_bit.c',
  'thread/ags_audio_loop.c',
  'thread/ags_audio_thread.c',
  'thread/ags_channel_thread.c',
  'thread/ags_export_thread.c',
  'thread/ags_sequencer_thread.c',
  'thread/ags_sf2_loader.c',
  'thread/ags_sfz_loader.c',
  'thread/ags_soundcard_thread.c',
  'thread/ags_wave_loader.c',
  'wasapi/ags_wasapi_devin.c',
  'wasapi/ags_wasapi_devout.c',
)

audio_dependencies = [
  soup_dependency,
  instpatch_dependency,
  samplerate_dependency,
  fftw3_dependency,
  m_dependency,
]

if get_option('alsa')
  audio_dependencies += alsa_dependency
endif

if get_option('jack')
  audio_dependencies += jack_dependency
endif

if get_option('pulse')
  audio_dependencies += dependency('libpulse')
endif

libaudio = static_library('audio',
                        audio_sources,
                        c_args: compiler_flags,
                        include_directories: [includes],
                        dependencies: audio_dependencies,
                       )
