deprecated_ags_object_h_sources =

ags_object_h_sources = \
	$(deprecated_ags_object_h_sources) \
	ags_applicable.h		\
	ags_countable.h			\
	ags_dynamic_connectable.h	\
	ags_effect.h			\
	ags_main_loop.h			\
	ags_marshal.h			\
	ags_mutable.h			\
	ags_packable.h			\
	ags_persistable.h		\
	ags_playable.h			\
	ags_plugin.h			\
	ags_portlet.h			\
	ags_runnable.h			\
	ags_seekable.h			\
	ags_soundcard.h			\
	ags_stackable.h			\
	ags_tactable.h			\
	ags_tree_iterator.h

deprecated_ags_object_c_sources = 

ags_object_c_sources = \
	$(deprecated_ags_object_c_sources) \
	ags_applicable.c		\
	ags_countable.c			\
	ags_dynamic_connectable.c	\
	ags_effect.c			\
	ags_main_loop.c			\
	ags_marshal.c			\
	ags_mutable.c			\
	ags_packable.c			\
	ags_persistable.c		\
	ags_playable.c			\
	ags_plugin.c			\
	ags_portlet.c			\
	ags_runnable.c			\
	ags_seekable.c			\
	ags_soundcard.c			\
	ags_stackable.c			\
	ags_tactable.c			\
	ags_tree_iterator.c

