deprecated_ags_plugin_h_sources =

ags_plugin_h_sources = \
	$(deprecated_ags_plugin_h_sources) \
	ags_ladspa_manager.h		\
	ags_plugin_factory.h		\
	ags_plugin_stock.h

deprecated_ags_plugin_c_sources = 

ags_plugin_c_sources = \
	$(deprecated_ags_plugin_c_sources) \
	ags_ladspa_manager.c		\
	ags_plugin_factory.c
