deprecated_ags_server_h_sources = 

ags_server_h_sources = \
	$(deprecated_ags_server_h_sources) \
	ags_registry.h			\
	ags_remote_task.h		\
	ags_server.h

deprecated_ags_server_c_sources = 

ags_server_c_sources = \
	$(deprecated_ags_server_c_sources) \
	ags_registry.c			\
	ags_remote_task.c		\
	ags_server.c

