include ./util/Makefile.am \
	./lib/Makefile.am \
	./object/Makefile.am \
	./widget/Makefile.am \
	./audio/Makefile.am \
	./file/Makefile.am \
	./X/Makefile.am \
	./file/Makefile.am \
	./server/Makefile.am 

libags_h_sources = 
libags_c_sources = 

libags_thread_h_sources = 
libags_thread_c_sources = 

libags_audio_h_sources = 
libags_audio_c_sources = 

libags_gui_h_sources = 
libags_gui_c_sources = 

gsequencer_h_sources = \
	main.h

gsequencer_c_sources = \
	main.c
