SUBDIRS = util \
	lib \
	object \
	widget \
	audio \
	file \
	X \
	file \
	server

libags_h_sources = 
libags_c_sources = 

libags_thread_h_sources = 
libags_thread_c_sources = 

libags_audio_h_sources = 
libags_audio_c_sources = 

libags_gui_h_sources = 
libags_gui_c_sources = 

gsequencer_h_sources = \
	main.h

gsequencer_c_sources = \
	main.c
