deprecated_ags_audio_file_h_sources = \
	ags_audio_file_xml.h	

ags_audio_audio_file_h_sources = \
	$(deprecated_ags_audio_file_h_sources) \
	ags_audio_file.h	\
	ags_ipatch.h		\
	ags_ipatch_sf2_reader.h	\
	ags_sndfile.h

deprecated_ags_audio_file_c_sources = \
	ags_audio_file_xml.c

ags_audio_audio_file_c_sources = \
	$(deprecated_ags_audio_file_c_sources) \
	ags_audio_file.c	\
	ags_ipatch.c		\
	ags_ipatch_sf2_reader.c	\
	ags_sndfile.c
